# example_vertex_ros

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ros.dependencies.txt  sdk.dependencies.txt
.devcontainer/ros/: devcontainer.json
.devcontainer/ros.drone/: devcontainer.json
.devcontainer/sdk/: devcontainer.json
.devcontainer/sdk.drone/: devcontainer.json
cmake/: CodeCoverage.cmake  GetPackageDependencies.cmake
control_examples/: README.md
control_examples/circle_example/: Dockerfile  README.md  docker-compose.yml
control_examples/circle_example/ws/avular_mavros_msgs/: CMakeLists.txt
control_examples/circle_example/ws/circle_example/: CMakeLists.txt  package.xml
control_examples/circle_example/ws/circle_example/src/: circle_example_node.cpp  circle_example_node.hpp  main.cpp
docker/: docker-compose.yml  ros.Dockerfile  ros.entrypoint.sh  sdk.Dockerfile  sdk.entrypoint.sh
ros/: .clang-format  README.md
ros/ros_bin/: creos-sdk-ros_0.2.2_amd64.deb  creos-sdk-ros_0.2.2_arm64.deb  creos-utils_0.2.2_amd64.deb  creos-utils_0.2.2_arm64.deb
ros/src/advanced/circle_example/: CMakeLists.txt  README.md  package.xml
ros/src/advanced/circle_example/src/: circle_references.cpp  circle_references.hpp  main.cpp
ros/src/advanced/common/: CMakeLists.txt  package.xml
ros/src/advanced/common/include/common/: drone_state.hpp  drone_state_interface.hpp  flight_controller.hpp  logging.hpp  remote_controller_interface.hpp
ros/src/advanced/common/src/: drone_state.cpp  flight_controller.cpp  herelink_remote.cpp  herelink_remote.hpp  jeti_remote.cpp  jeti_remote.hpp  remote_controller_factory.cpp
ros/src/advanced/remote_controller_example/: CMakeLists.txt  README.md  package.xml
ros/src/advanced/remote_controller_example/src/: main.cpp  remote_controller_example.hpp  remote_controller_references.cpp  remote_controller_references.hpp
ros/src/advanced/take_off_land_example/: CMakeLists.txt  package.xml
ros/src/advanced/take_off_land_example/src/: main.cpp
ros/src/getting_started/hello_world/: CMakeLists.txt  README.md  package.xml
ros/src/getting_started/hello_world/src/: main.cpp
ros/src/getting_started/system_monitor/: CMakeLists.txt  README.md  package.xml
ros/src/getting_started/system_monitor/src/: battery_notifier.hpp  control_source_notifier.hpp  main.cpp  state_notifier.hpp  system_info.hpp
sdk/: CMakeLists.txt  README.md
sdk/advanced/: CMakeLists.txt
sdk/advanced/circle_example/: CMakeLists.txt  README.md
sdk/advanced/circle_example/src/: circle_references.cpp  circle_references.hpp  main.cpp
sdk/advanced/common/: CMakeLists.txt
sdk/advanced/common/cli11/: CMakeLists.txt
sdk/advanced/common/include/common/: drone_state.hpp  drone_state_interface.hpp  flight_controller.hpp  logging.hpp  remote_controller_interface.hpp
sdk/advanced/common/src/: drone_state.cpp  flight_controller.cpp  herelink_remote.cpp  herelink_remote.hpp  jeti_remote.cpp  jeti_remote.hpp  remote_controller_factory.cpp
sdk/advanced/remote_controller_example/: CMakeLists.txt  README.md
sdk/advanced/remote_controller_example/src/: main.cpp  remote_controller_example.hpp  remote_controller_references.cpp  remote_controller_references.hpp
sdk/advanced/take_off_land_example/: CMakeLists.txt  README.md
sdk/advanced/take_off_land_example/src/: main.cpp
sdk/getting_started/: CMakeLists.txt
sdk/getting_started/hello_world/: CMakeLists.txt
sdk/getting_started/hello_world/src/: main.cpp
sdk/getting_started/system_monitor/: CMakeLists.txt  README.md
sdk/getting_started/system_monitor/src/: battery_notifier.hpp  control_source_notifier.hpp  main.cpp  state_notifier.hpp  system_info.hpp
sdk/sdk_bin/: creos-cli_0.2.2_amd64.deb  creos-cli_0.2.2_arm64.deb  creos-client-dev_0.2.2_amd64.deb  creos-client-dev_0.2.2_arm64.deb  creos-utils-dev_0.2.2_amd64.deb  creos-utils-dev_0.2.2_arm64.deb
