<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>take_off_land_example</name>
  <version>1.0.0</version>
  <description>Example of how to use the CreOS SDK to automatically take off and land.</description>
  <maintainer email="support@avular.com">Joep van Zuijlen</maintainer>
  <license>Avular Confidential</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>advanced_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
