<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello_world_example</name>
  <version>1.0.0</version>
  <description>Simple hello world example showcasing how to use ROS2 with the Avular Creos SDK</description>
  <maintainer email="support@avular.com">Joep van Zuijlen</maintainer>
  <license>Avular Confidential</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
